Fixed Aurora and Main Footer

--- a/aurora/index.pug
+++ b/aurora/index.pug
@@ -43,36 +43,48 @@ html(lang="en")
 			.welcome__second IS HERE NOW
 			.welcome__third Get score for using each of AURORA apps below
 			.welcome__prev Top 50 users with highest weekly score growth get 1-25 USDT! Starts every Monday.
-			a(href="#").welcome__prev_a Learn what score is ->
+			a(href="https://www.herewallet.app/blog/here-score-29ce3537e225").welcome__prev_a Learn what score is ->
 		
 		.cart-section
-			.cart-rainbow.cart-item
-				.cart-title Rainbow bridge
-				.cart-description Transfer tokens between Ethereum, NEAR & Aurora!
+			.cart-aurora.cart-item
+				.cart-title Aurora.Plus
+				.cart-description - Create Aurora+ account (or use an existing one)<br /> - Connect HERE Wallet<br /> - Stake $AURORA (the more you stake the more bonus points you get)<br /> - Submit the transaction hash as proof of completion
 				.cart-transaction
 					p First transaction:
 					button + 50
-			.cart-aurigami.cart-item
-				.cart-title Aurigami
-				.cart-description Aurora's native money market
+			.cart-rainbow.cart-item
+				.cart-title Rainbow bridge
+				.cart-description - Bridge* tokens from NEAR protocol/Ethereum** to Aurora<br /> - Submit the transaction hash as proof of completion<br /> *Use Fast Bridge feature to get max amount of bonus points**Bridging tokens from Ethereum to Aurora grants you more bonus points
 				.cart-transaction
 					p First transaction:
 					button + 50
 			.cart-trisolaris.cart-item
 				.cart-title Trisolaris
-				.cart-description Trisolaris is the first AMM exchange on Aurora
+				.cart-description - Go to https://www.trisolaris.io/#/swap in your browser<br /> - Connect your HERE wallet.<br /> - Swap tokens<br /> - Submit the transaction hash as proof of completion
 				.cart-transaction
 					p First transaction:
 					button + 50
 			.cart-finance.cart-item
 				.cart-title Pipeflare
-				.cart-description Explore Casual Play-To-Earn Games With Weekly Competitions and Leaderboards
+				.cart-description - Create a PipeFlare account and verify your e-mail<br /> - Kill 50 enemies in Pyro's Mining Rush or Mine 100 Blocks in Pyro's Mining Rush (this is TBD)<br /> - Submit your result
+				.cart-transaction
+					p First transaction:
+					button + 50
+			.cart-2048.cart-item
+				.cart-title 2048
+				.cart-description - Participate in the twenty48 by matching tiles and confirming the result.<br /> - After completing the game, add your result to Leaderboard and submit the transaction hash.
+				.cart-transaction
+					p First transaction:
+					button + 50
+			.cart-meson.cart-item
+				.cart-title Meson
+				.cart-description - - Bridge some of your stablecoins from any chain to Aurora<br /> - Submit the transaction hash as proof of completion
 				.cart-transaction
 					p First transaction:
 					button + 50
 
 		.connect-wallet
-			.connect-wallet__title Connect wallet <span>to start</span>
+			.connect-wallet__title scan from <span>HERE wallet</span> to claim score
 			.connect-wallet__qr
 		
 		.section-faq#faq
