--- a/aurora/index.pug
+++ b/aurora/index.pug
@@ -58,25 +58,25 @@ html(lang="en")
 				.cart-transaction
 					p First transaction:
 					button + 50
-			.cart-trisolaris.cart-item
+			.cart-trisolaris.cart-item.disabled
 				.cart-title Trisolaris
 				.cart-description - Go to https://www.trisolaris.io/#/swap in your browser<br /> - Connect your HERE wallet.<br /> - Swap tokens<br /> - Submit the transaction hash as proof of completion
 				.cart-transaction
 					p First transaction:
 					button + 50
-			.cart-finance.cart-item
+			.cart-finance.cart-item.disabled
 				.cart-title Pipeflare
 				.cart-description - Create a PipeFlare account and verify your e-mail<br /> - Kill 50 enemies in Pyro's Mining Rush or Mine 100 Blocks in Pyro's Mining Rush (this is TBD)<br /> - Submit your result
 				.cart-transaction
 					p First transaction:
 					button + 50
-			.cart-2048.cart-item
+			.cart-2048.cart-item.disabled
 				.cart-title 2048
 				.cart-description - Participate in the twenty48 by matching tiles and confirming the result.<br /> - After completing the game, add your result to Leaderboard and submit the transaction hash.
 				.cart-transaction
 					p First transaction:
 					button + 50
-			.cart-meson.cart-item
+			.cart-meson.cart-item.disabled
 				.cart-title Meson
 				.cart-description - - Bridge some of your stablecoins from any chain to Aurora<br /> - Submit the transaction hash as proof of completion
 				.cart-transaction
