--- a/aurora/index.pug
+++ b/aurora/index.pug
@@ -42,7 +42,7 @@ html(lang="en")
 				span AURORA
 			.welcome__second IS HERE NOW
 			.welcome__third Get score for using each of AURORA apps below
-			.welcome__prev Top 200 users with highest weekly score growth get 1-25 USDT! Starts every Monday.
+			.welcome__prev Top 200 users with highest weekly score growth get USDT! Starts every Monday.
 			a(href="https://www.herewallet.app/blog/here-score-29ce3537e225").welcome__prev_a Learn what score is ->
 		
 		.cart-section
