fixed logo Aurora Here Now

--- a/aurora/index.pug
+++ b/aurora/index.pug
@@ -40,7 +40,10 @@ html(lang="en")
 			.welcome__first
 				img(src="images/aurora-lite-logo.png", alt="Aurora is HERE now").welcome__logo
 				span AURORA
-			.welcome__second IS HERE NOW
+			.welcome__second
+				span IS
+				img(src="images/here-now.png", alt="HERE now")
+				span HERE
 			.welcome__third Get score for using each of AURORA apps below
 			.welcome__prev Top 200 users with highest weekly score growth get USDT! Starts every Monday.
 			a(href="https://www.herewallet.app/blog/here-score-29ce3537e225").welcome__prev_a Learn what score is ->
