aurora: add completed status

--- a/aurora/style.sass
+++ b/aurora/style.sass
@@ -329,6 +329,13 @@ body
 				background-position: 4px 50%
 				background-size: 18px
 
+				&.success
+					background-color: #087164
+					box-shadow: 2px 2px 0px 0px #087164
+					background-image: none
+					color: #fff
+					padding: 4px 8px 4px 8px
+
 	.cart-item.disabled
 		opacity: 0.5
 
