Fixed Pager and MainPage

--- a/landing/index.pug
+++ b/landing/index.pug
@@ -45,7 +45,7 @@ html(lang="en")
                 .page-background
                 include section-features/index.pug
                 include section-binance/index.pug
-                include section-howwork/index.pug
+                include section-oneplace/index.pug
                 include section-security/index.pug
                 include section-download/index.pug
                 include section-news/index.pug
