--- a/landing/index.sass
+++ b/landing/index.sass
@@ -5,7 +5,7 @@
 @import "section-news"
 @import "section-download"
 @import "section-binance"
-@import "section-howwork"
+@import "section-oneplace"
 @import "section-asks"
 @import "section-comparison"
 @import "section-security"
