--- a/landing/section-partners/index.pug
+++ b/landing/section-partners/index.pug
@@ -3,18 +3,20 @@ section.partners
         | Partners
         span.dot .
     .partners-group
-        a(href="https://tradeport.xyz/").partners_1
-            img(src='/assets/partners/trade-port.svg', width="185px", height="40px")
-        a(href="https://paras.id").partners_2
-            img(src='/assets/partners/paras.svg', width="112px", height="26px")
+        a(href="#").partners_14
+            img(src='/assets/partners/near-foundation.svg', width="215px", height="88px")
+        a(href="#").partners_15
+            img(src='/assets/partners/big-brain.svg', width="347px", height="99px")
+        a(href="#").partners_16
+            img(src='/assets/partners/p.svg', width="110px", height="110px")
+        a(href="#").partners_17
+            img(src='/assets/partners/hito.svg', width="108px", height="46px")
+        a(href="#").partners_18
+            img(src='/assets/partners/aurora.png', width="242px", height="61px")
         a(href="https://orderly.network/").partners_3
             img(src='/assets/partners/orderly-network.svg', width="244px", height="30px")
-        a(href="https://www.mintbase.io/").partners_4
-            img(src='/assets/partners/mintbase.svg', width="148px", height="38px")
-        a(href="https://spin.fi/").partners_5
-            img(src='/assets/partners/spin.svg', width="116px", height="32px")
-        a(href="https://pembrock.finance/").partners_6
-            img(src='/assets/partners/pemb-rock.svg', width="158px", height="42px")
+        a(href="https://tradeport.xyz/").partners_1
+            img(src='/assets/partners/trade-port.svg', width="185px", height="40px")
         a(href="https://app.burrow.cash/").partners_7
             img(src='/assets/partners/burrow.svg', width="145px", height="39px")
         a(href="https://mercuryo.io/").partners_8
