--- a/pager-freemint/style.sass
+++ b/pager-freemint/style.sass
@@ -135,12 +135,17 @@ body
 	@media (max-width: 1000px)
 		margin: 0 auto 40px auto
 	@media (max-width: 750px)
+		flex-wrap: wrap
 		margin: 0 0 64px 0
 		padding: 16px 16px 0 16px
 	.logo
 		display: block
 		flex-shrink: 0
 		width: 96px
+		@media (max-width: 750px)
+			order: 1
+		@media (max-width: 370px)
+			margin: 0 0 16px 0
 		img
 			width: 100%
 	.menu__faq
@@ -155,8 +160,8 @@ body
 		@media (max-width: 750px)
 			display: none
 	.btn-connect-wallet
-		margin: 0 0 0 auto
-		padding: 12px 16px
+		margin: 0 0 0 76px
+		padding: 22px 48px
 		background-color: transparent
 		border-radius: 24px
 		border: 1px #F5DBB6 solid
@@ -164,16 +169,48 @@ body
 		font-weight: 600
 		line-height: 1.25
 		cursor: pointer
+		@media (max-width: 1000px)
+			margin: 0 0 0 24px
 		@media (max-width: 750px)
+			order: 2
 			width: 200px
+			margin: 0 0 0 auto
 			padding: 14px 24px 14px 24px
 			background-color: rgba(237, 209, 171, 1)
 			text-align: center
 			color: rgba(44, 58, 62, 1)
+		@media (max-width: 370px)
+			width: 100%
+			margin: 0 0 16px 0
+			padding: 12px 24px
 		&:hover
 			color: #5d666f
 		@media (max-width: 300px)
 			padding: 8px 12px
+.follow-us
+	display: flex
+	align-items: center
+	gap: 24px
+	margin: 0 0 0 auto
+	@media (max-width: 750px)
+		order: 3
+		width: 100%
+		margin: 16px 0 0 0
+	&__title
+		color: #FFF
+		text-align: center
+		font-feature-settings: 'calt' off, 'liga' off
+		font-weight: 600
+		line-height: 1.25
+	&__ul
+		display: flex
+		align-items: center
+		gap: 13px
+	&__li
+		width: 24px
+		height: 24px
+		img
+			width: 100%
 
 .screen-title
 	display: flex
@@ -235,6 +272,22 @@ body
 				font-size: 20px
 			@media (max-width: 750px)
 				font-size: 18px
+		.title-link
+			display: inline-block
+			margin: 48px 0 72px 0
+			color: rgba(237, 209, 171, 0.80)
+			font-feature-settings: 'liga' off
+			text-shadow: 4px 8px 16px #101010
+			font-size: 1.25em
+			font-style: normal
+			font-weight: 600
+			line-height: 1.6
+			letter-spacing: -0.4px
+			text-decoration: underline
+			@media (max-width: 750px)
+				margin: 24px 0 24px 0
+			&:hover
+				text-decoration: none
 	&__right
 		width: 100%
 		max-width: 880px
@@ -254,7 +307,29 @@ body
 		width: 100%
 		@media (max-width: 750px)
 			transform: scale(1.3)
-
+.backed-by
+	display: flex
+	flex-direction: column
+	align-items: flex-start
+	gap: 16px
+	@media (max-width: 1000px)
+		flex-direction: row
+		flex-wrap: wrap
+	@media (max-width: 750px)
+		justify-content: center
+		margin: 0 0 24px 0
+	&__title
+		color: rgba(237, 209, 171, 0.80)
+		font-size: 1.25em
+		font-weight: 600
+		line-height: 1.6
+		letter-spacing: -0.4px
+		@media (max-width: 1000px)
+			width: 100%
+	&__brain
+		height: 44px
+	&__near
+		height: 44px
 .screen-stock
 	width: 100%
 	background-image: url(./images/bg-pagerinstock.png)
@@ -481,7 +556,8 @@ body
 							font-size: 16px
 							border-bottom: 2.248px solid #EDD1AB
 							
-						div
+						&_left
+							position: relative
 							text-shadow: 4px 8px 16px #101010
 						&:nth-last-child(1)
 							border-bottom: 0
@@ -541,6 +617,52 @@ body
 						transform: unset
 						width: calc( 100% - 18px )
 						margin: 0 auto
+
+.tooltip
+	display: none
+	position: absolute
+	border-radius: 5px
+	z-index: 1
+	min-width: 16rem
+	padding: 12px
+	border-radius: 12px
+	border: 1px solid #EDD1AB
+	background-color: #EDD1AB
+	font-size: 16px
+	font-weight: 600
+	letter-spacing: -0.32px
+	color: #0D0C0A
+	&:after
+		position: absolute
+		top: -24px
+		left: 50%
+		transform: translateX(-50%)
+		width: 0
+		height: 0
+		border-left: 50px solid transparent
+		border-right: 50px solid transparent
+		border-bottom: 100px solid #EDD1AB
+
+	&-container
+		position: relative
+		display: inline-block
+		width: 32px
+		height: 32px
+	&-trigger
+		display: block
+		width: 32px
+		height: 32px
+		background-image: url(./images/icon-questions.svg)
+		background-position: 50%
+		background-repeat: no-repeat
+		background-size: 24px auto
+
+
+.tooltip-trigger:hover + .tooltip,
+.tooltip-trigger.clicked + .tooltip
+	display: block
+
+
 .slider-item__slide-tables
 	display: flex
 	flex-shrink: 0
