--- a/pager-freemint/index.pug
+++ b/pager-freemint/index.pug
@@ -1,3 +1,3 @@
 doctype html
 head
-  meta(http-equiv='refresh' content="0; url='https://herewallet.app/pager'")
+  meta(http-equiv='refresh' content="0; url='https://pager.herewallet.app'")
