--- a/landing/section-oneplace/index.sass
+++ b/landing/section-oneplace/index.sass
@@ -13,3 +13,23 @@
 			max-width: 100%
 			@media (max-width: 750px)
 				max-height: 2rem
+			&:nth-child(1)
+				max-width: 126px
+			&:nth-child(2)
+				max-width: 206px
+			&:nth-child(3)
+				max-width: 302px
+			&:nth-child(4)
+				max-width: 180px
+			&:nth-child(5)
+				max-width: 160px
+			&:nth-child(6)
+				max-width: 186px
+			&:nth-child(7)
+				max-width: 170px
+			&:nth-child(8)
+				max-width: 182px
+			&:nth-child(9)
+				max-width: 131px
+
+			
